# CurrentSong

./: .editorconfig  .manifest  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: actor.rs  app.rs  config.rs  console.rs  driver.rs  file.rs  main.rs  process.rs  song.rs  window.rs
src/driver/: mod.rs  noop.rs  spotify_desktop.rs
src/process/: mod.rs  windows.rs
src/windowing/: mod.rs  windows.rs  windows_gdi.rs
src/windowing/gdi/: color.rs
