[package]
name = "currentsong"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
ctrlc = { version = "3", features = ["termination"] }
dirs = "4"
flume = "0.10"
nwg = { version = "^1.0", package = "native-windows-gui", default-features = false, features = [
    "high-dpi",
    "raw-win-handle",
    "flexbox",
    "notice",
] }
open = "3.2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.27", default-features = false }
thiserror = "1.0"
windows-sys = { version = "0.45", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
embed-manifest = "1.3"

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true
panic = "abort"
