[package]
name = "currentsong"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3", features = ["termination"] }
dirs = "4"
flume = { version = "0.10", default-features = false }
nwg = { version = "^1.0", package = "native-windows-gui", default-features = false, features = [
    "notice",
] }
open = "4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.28", default-features = false }
windows-sys = { version = "0.45", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-manifest = "1.3"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
